--- a/scripts/theme/ant-theme-vars.less
+++ b/scripts/theme/ant-theme-vars.less
@@ -1,6 +1,32 @@
 // ant default vars
 // https://github.com/ant-design/ant-design/blob/master/components/style/themes/default.less
 
-@primary-color: #193D71;
+@red = '#E7404E';
+@black = '#000';
+@slate = '#324B5C';
+@gray = '#DEE0E0';
+@white = '#FFF';
+@green = "#1FB214";
+
+
+@primary-color: green;
+@body-background: slate;
+@font-size-base: 16px;
+@table-header-bg: slate;
+@table-row-hover-bg: white;
+@heading-color: black; //change to white later (can't see!)
+@card-head-color: gray;
+@card-head-background: green;
+@layout-header-background: gray;
+@layout-header-padding: 10px 50px;
+@menu-dark-bg: gray;
+
+.contentStyles{
+  background: @green;
+  padding: 30px;
+  margin-top: 64px;
+  height: 100%;
+  color: red;
+}
 
 // @icon-url is handled in the webpack.${environment}.config and assets/styles/common/iconfonts.less files
